test/expected/define_c_int_least32_t.out
define int_least32_t as char
                        ^
25: error: type "character" redefinition incompatible with original type "int"
